# cribcall

./: .firebaserc  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PROGRESS.md  README.md  SPEC.md  analysis_options.yaml  flake.nix  plan_control_stream.md  plan_macos_support.md  plan_noise_subscriptions.md  plan_quic.md  pubspec.yaml
android/app/: build.gradle.kts  google-services.json  google-services.json.example
docs/: ARCHITECTURE_SIMPLIFICATION_PLAN.md  PROTOCOL_CONFORMANCE_TESTS.md
functions/: .gitignore  package.json
functions/src/: index.ts
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist  (+5 more)
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
native/cribcall_quic/rust/: Cargo.toml
native/cribcall_quic/rust/src/: lib.rs
native/cribcall_quic/src/: CMakeLists.txt  cribcall_quic.c  cribcall_quic.h
scripts/: generate_google_services_json.sh  rotate_api_keys.sh  setup-virtual-mic.sh
test/: app_session_repository_test.dart  cli_harness_test.dart  control_channel_test.dart  control_frame_codec_test.dart  control_message_test.dart  control_unpair_test.dart  device_identity_test.dart  domain_models_test.dart  http_transport_test.dart  identity_repository_test.dart  monitor_settings_dropdown_test.dart  noise_subscriptions_test.dart  pairing_transcript_test.dart  protocol_conformance_test.dart  qr_payload_parser_test.dart  service_identity_test.dart  settings_repository_test.dart  sound_detector_test.dart  state_providers_test.dart  widget_test.dart
test_specs/: README.md  schema.yaml
tool/: control_cli.dart
(+162 files in other folders)
