[package]
name = "cribcall_quic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
allo-isolate = "0.1.27"
base64 = "0.22"
dashmap = "5.5"
env_logger = "0.11"
log = "0.4"
once_cell = "1.19"
quiche = { version = "0.24.0", default-features = false, features = [
  "boringssl-vendored",
] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
hex = "0.4"
